<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <!-- Opcional: heredar de Spring Boot para no repetir versiones -->
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.1.0</version>
    <relativePath/> 
  </parent>

  <groupId>com.aaamundial</groupId>
  <artifactId>firma-service</artifactId>
  <version>0.1.0</version>
  <packaging>jar</packaging>

  <properties>
    <!-- Nivel de Java para compilar -->
    <java.version>8</java.version>
  </properties>

  <dependencies>
    <!-- Dependencia Spring Boot Web (no necesitas versión si heredas del parent) -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>

    <!-- Tu JAR local -->
    <dependency>
      <groupId>com.aaamundial</groupId>
      <artifactId>FirmaElectronica</artifactId>
      <version>1.0.0</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <!-- 1) Instalar FirmaElectronica.jar antes de compilar -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-install-plugin</artifactId>
        <version>3.0.0-M1</version>
        <executions>
          <execution>
            <id>install-firma</id>
            <phase>initialize</phase>
            <goals>
              <goal>install-file</goal>
            </goals>
            <configuration>
              <file>${project.basedir}/libs/FirmaElectronica.jar</file>
              <groupId>com.aaamundial</groupId>
              <artifactId>FirmaElectronica</artifactId>
              <version>1.0.0</version>
              <packaging>jar</packaging>
            </configuration>
          </execution>
        </executions>
      </plugin>

      <!-- 2) Compilador de Java (usa las propiedades definidas arriba) -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <release>${java.version}</release>
        </configuration>
      </plugin>

      <!-- 3) Empaquetar con Spring Boot -->
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <layered>false</layered>
        </configuration>
      </plugin>
    </plugins>
  </build>
</project>
